--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "core-js": "^3.6.5",
     "firebase": "^7.24.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-google-charts": "^0.3.3",
+    "vue-router": "^3.2.0",
+    "vuefire": "^2.2.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
